# ocv_recognizer

./: CMakeLists.txt  LICENSE  README.md
ocv_recognizer/: detect_chars.cpp  detect_chars.h  detect_plates.cpp  detect_plates.h  main.cpp  main.h  possible_char.cpp  possible_char.h  possible_plate.cpp  possible_plate.h  preprocess.cpp
ocv_recognizer.xcodeproj/: project.pbxproj
ocv_recognizer.xcodeproj/project.xcworkspace/xcuserdata/starchykov.xcuserdatad/: UserInterfaceState.xcuserstate
ocv_recognizer.xcodeproj/xcuserdata/starchykov.xcuserdatad/xcschemes/: xcschememanagement.plist
